# robocup2026-raspberrypi-program

./: .gitignore  CONDITIONAL_LOGGING.md  DEPTH_SETUP.md  IMPLEMENTATION_SUMMARY.md  README.md  configure_fs.sh  configure_network.sh  configure_raspberry_pi.sh  fetch.sh  fetch_origin.sh  fetch_result.sh  format.sh  get.sh  main.py  pyproject.toml  requirements-freeze.txt  requirements.txt  robot-restart.service  robot.path  robot.service  rotation.py  send.sh  setup_depth.sh  stress_test.py
.github/agents/: agend.md  agent.md
.github/workflows/: ci.yaml
modules/: camera.py  constants.py  logger.py  robot.py
tests/: demo_conditional_logging.py  stress_test.py  test_integration.py  test_logger.py
