[project]
name = "robocup2026-raspberrypi-kanto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "depth-anything-v2>=0.1.0",
    "gradio>=6.1.0",
    "gradio-imageslider>=0.0.20",
    "huggingface-hub>=1.2.3",
    "matplotlib>=3.10.8",
    "opencv-python>=4.12.0.88",
    "pillow>=12.0.0",
    "pyserial>=3.5",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "ultralytics>=8.3.240",
]
